# sb-project

./: .gitignore  README.md
0_algorithms/kmp_substring_search/: CMakeLists.txt  main.cpp
0_example/example/: main.cpp
0_example/how_to_create_a_class_instance/: CMakeLists.txt  main.cpp
0_example/nlohmann_json/: CMakeLists.txt  main.cpp
0_example/rule_10_assignment_operators/: main.cpp
0_example/rule_12_copy_al_ parts_of_an_object/: CMakeLists.txt  main.cpp
0_example/rule_2_const_enum_inline/: main.cpp
0_example/rule_3_where_possible_use_const/: main.cpp
0_example/rule_4_object_initialization/: main.cpp
0_example/rule_5_default_method_generation/: main.cpp
0_example/rule_6_disable_generation_of_methods/: main.cpp
0_example/rule_7_virtual_destructor_in_base_class/: main.cpp
11-functions/1-Caesar cipher/: main.cpp
11-functions/3-IP-address-validation/: main.cpp
11-functions/4-Comparison-of-long-real-numbers/: main.cpp
11_functions/2_check_email/: main.cpp
11_functions/4_comparison_of_long_real_numbers/: main.cpp
11_functions/5_analysis_of_the_results_tic_tac_toe/: main.cpp
12-One-dimensional-arrays/1-Apartment-house/: main.cpp
12-One-dimensional-arrays/2-Row-of-numbers/: main.cpp
12-One-dimensional-arrays/3-Sorting/: main.cpp
12_One_dimensional_arrays/3_sorting/: main.cpp
13-vector/1-task/: main.cpp
13-vector/2-task/: main.cpp
13-vector/3-task/: main.cpp
13_vector/1_task/: main.cpp
14-2D-arrays/1-banquet-table/: main.cpp
14-2D-arrays/2-tic-tac-toe/: main.cpp
14-2D-arrays/3-snake-passage/: main.cpp
14-2D-arrays/5-diagonal-matrix/: main.cpp
14-2D-arrays/6-Matrix-vector-multiplication/: main.cpp
14-2D-arrays/7-Bubble-wrap/: main.cpp
14-2D-arrays/8-almost-minecraft/: main.cpp
14_2D_arrays/3_snake_passage/: main.cpp
14_2D_arrays/4_matrix_equality/: main.cpp
14_2D_arrays/7_bubble_wrap/: main.cpp
14_2D_arrays/9_sea_battle/: main.cpp
25_project_structure/1_operations_simulator/: CMakeLists.txt
25_project_structure/1_operations_simulator/include/: incision.h  point.h
25_project_structure/1_operations_simulator/src/: incision.cpp  main.cpp  point.cpp
25_project_structure/2_computer_simulator/: CMakeLists.txt
25_project_structure/2_computer_simulator/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
25_project_structure/2_computer_simulator/src/: cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
26_oop_part_1/1_imitation_audio_player/: CMakeLists.txt  CompactDisk.txt
26_oop_part_1/1_imitation_audio_player/include/: AudioPlayer.h  Track.h
26_oop_part_1/1_imitation_audio_player/src/: AudioPlayer.cpp  Track.cpp  main.cpp
26_oop_part_1/2_mobile_phone_simulation/: CMakeLists.txt
26_oop_part_1/2_mobile_phone_simulation/include/: MobilePhone.h  Person.h  Verification.h
26_oop_part_1/2_mobile_phone_simulation/src/: MobilePhone.cpp  Person.cpp  Verification.cpp  main.cpp
26_oop_part_1/3_desktop_window_control/: CMakeLists.txt
26_oop_part_1/3_desktop_window_control/include/: Display.h  ScreenResolution.h  Window.h
26_oop_part_1/3_desktop_window_control/src/: Display.cpp  Window.cpp  main.cpp
27_oop_part_2/1_elf_village/: CMakeLists.txt
27_oop_part_2/1_elf_village/include/: Branch.h  Forest.h  Verification.h
27_oop_part_2/1_elf_village/src/: Branch.cpp  Forest.cpp  main.cpp
27_oop_part_2/2_hierarchy_of_geometric_shapes/: CMakeLists.txt
27_oop_part_2/2_hierarchy_of_geometric_shapes/include/: Circle.h  EquilateralTriangle.h  GeometricFigure.h  Rectangle.h  Square.h
27_oop_part_2/2_hierarchy_of_geometric_shapes/src/: Circle.cpp  EquilateralTriangle.cpp  GeometricFigure.cpp  Rectangle.cpp  Square.cpp  main.cpp
27_oop_part_2/3_simulation_of_the_company/: CMakeLists.txt
27_oop_part_2/3_simulation_of_the_company/include/: CompanyHead.h  Employee.h  Manager.h  StaffMember.h
27_oop_part_2/3_simulation_of_the_company/src/: CompanyHead.cpp  Employee.cpp  Manager.cpp  StaffMember.cpp  main.cpp
29_oop_paradigms/: CMakeLists.txt
31_smart_ptr/1_smart_toy_pointer/: CMakeLists.txt
31_smart_ptr/1_smart_toy_pointer/include/: Dog.h  SharedPtrToy.h  SmartPtrToy.h  Toy.h
31_smart_ptr/1_smart_toy_pointer/src/: Dog.cpp  SharedPtrToy.cpp  SmartPtrToy.cpp  Toy.cpp  main.cpp
31_smart_ptr/2_graph_class_implementation/: CMakeLists.txt
31_smart_ptr/2_graph_class_implementation/include/: IGraph.h  ListGraph.h  MatrixGraph.h
31_smart_ptr/2_graph_class_implementation/src/: ListGraph.cpp  MatrixGraph.cpp  main.cpp
32_JSON_serialization_and_deserialization/2_movie_data_analysis/: CMakeLists.txt  main.cpp
36_qt_widgets/0_example3/: CMakeLists.txt  main.cpp
36_qt_widgets/1_task/: CMakeLists.txt  main.cpp
37_qt_designer_and_qml/3_tv_remote_control/: CMakeLists.txt  MainTvRemoteControl.cpp  MainTvRemoteControl.h  main.cpp  tvRemoteControl.ui
38_advanced_qt/0_example1/: CMakeLists.txt  main.cpp
38_advanced_qt/0_example3/: CMakeLists.txt  main.cpp
38_advanced_qt/1_adding_sound_to_a_button/: CMakeLists.txt  ImageButton.cpp  ImageButton.h  main.cpp
38_advanced_qt/2_html_file_editing_application/: CMakeLists.txt  main.cpp
38_advanced_qt/3_blur_effect_app/: CMakeLists.txt  main.cpp
39_additional_features_of_Qt/2_regular_expressions_in_Qt/: CMakeLists.txt  main.cpp
40_final_project/search_engine/: CMakeLists.txt  config.json  requests.json
40_final_project/search_engine/include/: ConverterJSON.h  CustomExceptions.h  InvertedIndex.h  SearchServer.h  WordHandler.h
40_final_project/search_engine/resource/: file002.txt  file003.txt
40_final_project/search_engine/search_engine_test/: CMakeLists.txt  main.cpp
40_final_project/search_engine/src/: ConverterJSON.cpp  CustomExceptions.cpp  InvertedIndex.cpp  SearchServer.cpp  WordHandler.cpp  main.cpp
40_final_project/search_engine/unit_tests/: CMakeLists.txt  main.cpp
40_final_project/search_engine/unit_tests/InvertedIndex_test/: InvertedIndexBasicTest.cpp
40_final_project/search_engine/unit_tests/SearchServer_test/: SearchServerBasicTest.cpp
40_final_project/search_engine/unit_tests/WordHandler_test/: WordHandlerBasicTest.cpp
(+194 files in other folders)
